docs/pages/versions/v36.0.0/sdk/google-sign-in.md
---
title: GoogleSignIn
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-36/packages/expo-google-sign-in'
---

import PlatformsSection from '~/components/plugins/PlatformsSection';

import TableOfContentSection from '~/components/plugins/TableOfContentSection';

**`expo-google-sign-in`** provides native Google authentication for **standalone** Expo apps or bare React Native apps. It cannot be used in the Expo client as the native `GoogleSignIn` library expects your `REVERSE_CLIENT_ID` in the `info.plist` at build-time. To use Google authentication in the Expo client, check out [`expo-google-app-auth`](../google) or [expo-app-auth](../app-auth).

<PlatformsSection android emulator ios simulator web={{ pending: 'https://github.com/expo/expo/issues/6884' }} />

## Installation

For [managed](../../introduction/managed-vs-bare/#managed-workflow) apps, you'll need to run `expo install expo-google-sign-in`. To use it in a [bare](../../introduction/managed-vs-bare/#bare-workflow) React Native app, follow its [installation instructions](https://github.com/expo/expo/tree/master/packages/expo-google-sign-in).

## Configuration

For questions on setup, feel free to comment on this post: [**React Native Google Sign-Up**](https://blog.expo.io/react-native-google-sign-in-with-expo-d1707579a7ce)

1. Go to your `app.json` and make sure you define your `ios.bundleIdentifier` and the `android.package` you want to use.
2. In `app.json`, set `expo.ios.config.googleSignIn.reservedClientId` to your reversed client ID.

### Usage with Firebase

When using Firebase, also configure the Google-services configuration files:

1. Open up [the Firebase Console](https://console.firebase.google.com) and setup a new project, or use an existing one.
2. Create a native iOS, and Android app using the Bundle ID and Android package you defined earlier.
3. Download the `GoogleService-Info.plist` (iOS) & the `google-services.json` (Android). Move them to your Expo project.
4. In `app.json`, set your `expo.ios.config.googleSignIn.reservedClientId` to the value of `REVERSE_CLIENT_ID` in the `GoogleService-Info.plist`.
5. Also in `app.json`, set `expo.ios.googleServicesFile` to the relative path of your `GoogleService-Info.plist`. Make sure the file is located somewhere in your Expo project.
6. And also in `app.json`, set `expo.android.googleServicesFile` to the relative path of your `google-services.json`. Make sure the file is located somewhere in your Expo project.

```js
 // app.json
{
  "expo": {
    "ios": {
      // The bundle ID you used with your Firebase app
      "bundleIdentifier": "example.expo.googlesignin",
      "config": {
        "googleSignIn": {
          // Your REVERSED_CLIENT_ID from the GoogleService-Info.plist
          "reservedClientId": "<YOUR_REVERSED_IOS_CLIENT_ID>"
        }
      },
      // Optional path to the iOS file generated by Firebase
      "googleServicesFile": "./GoogleService-Info.plist"
    },
    "android": {
      // The package you used with your Firebase app
      "package": "example.expo.googlesignin",
      // Optional path to the Android file generated by Firebase
      "googleServicesFile": "./google-services.json"
    }
  }
}
```

At this point you can build your project and upload it to the App Store or the Google Play Store.

When your app is built you can verify that the iOS URL Scheme is properly set up by reading it using the `expo-app-auth` module in a standalone app.

```js
import * as AppAuth from 'expo-app-auth';

// When configured correctly, URLSchemes should contain your REVERSED_CLIENT_ID
const { URLSchemes } = AppAuth;
```

## Usage

```js
import React from 'react';
import { Text } from 'react-native';
import * as GoogleSignIn from 'expo-google-sign-in';

export default class AuthScreen extends React.Component {
  state = { user: null };

  componentDidMount() {
    this.initAsync();
  }

  initAsync = async () => {
    await GoogleSignIn.initAsync({
      // You may ommit the clientId when the firebase `googleServicesFile` is configured
      clientId: '<YOUR_IOS_CLIENT_ID>',
    });
    this._syncUserWithStateAsync();
  };

  _syncUserWithStateAsync = async () => {
    const user = await GoogleSignIn.signInSilentlyAsync();
    this.setState({ user });
  };

  signOutAsync = async () => {
    await GoogleSignIn.signOutAsync();
    this.setState({ user: null });
  };

  signInAsync = async () => {
    try {
      await GoogleSignIn.askForPlayServicesAsync();
      const { type, user } = await GoogleSignIn.signInAsync();
      if (type === 'success') {
        this._syncUserWithStateAsync();
      }
    } catch ({ message }) {
      alert('login: Error:' + message);
    }
  };

  onPress = () => {
    if (this.state.user) {
      this.signOutAsync();
    } else {
      this.signInAsync();
    }
  };

  render() {
    return <Text onPress={this.onPress}>Toggle Auth</Text>;
  }
}
```

### Initialization

Before using the API we first need to call `GoogleSignIn.initAsync({ ... })` which configures how sign in functionality will work.

```js
try {
  await GoogleSignIn.initAsync({
    // You may ommit the clientId when the firebase `googleServicesFile` is configured
    clientId: '<YOUR_IOS_CLIENT_ID>',
    // Provide other custom options...
  });
} catch ({ message }) {
  alert('GoogleSignIn.initAsync(): ' + message);
}
```

## API

```js
import * as GoogleSignIn from 'expo-google-sign-in';
```

<TableOfContentSection title='Methods' contents={['GoogleSignIn.getPlayServiceAvailability(shouldAsk)', 'GoogleSignIn.askForPlayServicesAsync()', 'GoogleSignIn.initAsync(options)', 'GoogleSignIn.isSignedInAsync()', 'GoogleSignIn.signInSilentlyAsync()', 'GoogleSignIn.signInAsync()', 'GoogleSignIn.signOutAsync()', 'GoogleSignIn.isConnectedAsync()', 'GoogleSignIn.disconnectAsync()', 'GoogleSignIn.getCurrentUserAsync()', 'GoogleSignIn.getCurrentUser()', 'GoogleSignIn.getPhotoAsync(size)']} />

<TableOfContentSection title='Types' contents={[]} />

<TableOfContentSection title='Classes' contents={['GoogleAuthData', 'GoogleIdentity', 'GoogleUser', 'GoogleAuthentication']} />

<TableOfContentSection title='Constants' contents={['GoogleSignIn.ERRORS', 'GoogleSignIn.SCOPES', 'GoogleSignIn.TYPES']} />

## Methods

### `GoogleSignIn.getPlayServiceAvailability(shouldAsk)`

> Android Only, this method always returns true on iOS

Use this method to determine if a user's device can utilize Google Sign-In functionality.
By default this method will assume the option is `false` and silently check for Play Services, whereas passing `true` will present a modal if the Play Services aren't available, prompting the user to update Play Services.

### `GoogleSignIn.askForPlayServicesAsync()`

> Android Only, this method always returns true on iOS

A convenience wrapper for `GoogleSignIn.getPlayServiceAvailability(true)`, this method will present a modal for the user to update Play Services if they aren't already up-to-date.

Returns true after the user successfully updates.

### `GoogleSignIn.initAsync(options)`

Configures how the `GoogleSignIn` module will attempt to sign in. You can call this method multiple times.

See all the available options under the [`GoogleSignInOptions`](#googlesigninoptions) type.

### `GoogleSignIn.isSignedInAsync()`

Asynchronously returns a boolean representing the user's authentication status.

### `GoogleSignIn.signInSilentlyAsync()`

This method will attempt to reauthenticate the user without initializing the authentication flow. If the method is successful, the currently authenticated `GoogleUser` will be returned, otherwise the method will return `null`.

On Android, the returned `GoogleUser` object may have a nonnull `serverAuthCode` rather than a `refreshToken`. If you need a refresh token, you can call Google's API directly to exchange the authorization code for a token. Instructions for how to perform this request can be found [in Google's documentation](https://developers.google.com/identity/protocols/OAuth2InstalledApp#exchange-authorization-code) ("Step 5: Exchange authorization code for refresh and access tokens"). The `clientId` in these requests is the **Web Client ID** from the Google API Console.

### `GoogleSignIn.signInAsync()`

Starts the native authentication flow with the information provided in `GoogleSignIn.initAsync()`.
If a user cancels, the method will return `{ type: 'cancel', user: null }`. However if a user successfully finishes the authentication flow, the returned value will be: `{ type: 'success', user: GoogleUser }`.

There are some errors that can be thrown while authenticating, check [`GoogleSignIn.ERRORS`](#googlesigninerrors) for available error codes.

### `GoogleSignIn.signOutAsync()`

Signs out the currently authenticated user. Unlike `GoogleSignIn.disconnectAsync()`, this method will not revoke the access token. This means you can specify the `accountName` and reauthenticate without extra user approval.

### `GoogleSignIn.isConnectedAsync()`

Returns true if a user is authenticated and the access token has not been invalidated.

### `GoogleSignIn.disconnectAsync()`

Signs out the current user and revokes the access tokens associated with the account. This will prevent reauthentication, whereas `GoogleSignIn.signOutAsync()` will not.

### `GoogleSignIn.getCurrentUserAsync()`

If a user is authenticated, this method will return all the basic profile information in the form of a [`GoogleUser`](#googleuser).

### `GoogleSignIn.getCurrentUser()`

Get the most recent instance of the authenticated [`GoogleUser`](#googleuser).

### `GoogleSignIn.getPhotoAsync(size)`

Returns an image URI for the currently authenticated user. This method will return `null` if no user is signed in, or if the current user doesn't have a profile image on Google.
The default size is `128px`, if the requested image size is larger than the original image size, the full sized image will be returned.

## Types

```js
/* Android Only */
type GoogleSignInType = 'default' | 'games';
```

```js
type GoogleSignInOptions = {
  /*
   * [iOS][Android][optional]: `accountName: ?string`
   * [default]: `[GoogleSignIn.SCOPES.PROFILE, GoogleSignIn.SCOPES.EMAIL]`
   * Pass the scopes you wish to have access to.
   */
  scopes: ?Array<string>,

  /*
   * [iOS][Android][optional]: `webClientId: ?string`
   * [default]: `undefined`
   * The client ID of the home web server.  This will be returned as the |audience| property of the
   * OpenID Connect ID token.  For more info on the ID token:
   * https://developers.google.com/identity/sign-in/ios/backend-auth
   */
  webClientId: ?string,

  /*
   * [iOS][Android][optional]: `hostedDomain: ?string`
   * [default]: `undefined`
   * The hosted G Suite domain of the user. Provided only if the user belongs to a hosted domain.
   */
  hostedDomain: ?string,

  /*
   * [iOS][Android][optional]: `accountName: ?string`
   * [default]: `undefined`
   * If you know the user's email address ahead of time, you can add it here and it will be the default option
   * if the user has approved access for this app, the Auth will return instantly.
   */
  accountName: ?string,

  /*
   * [Android][optional]: `signInType?: GoogleSignIn.TYPES.DEFAULT | GoogleSignIn.TYPES.GAMES`
   * [default]: `undefined`
   * The service you wish to sign in to
   * GoogleSignIn.TYPES.DEFAULT | GoogleSignIn.TYPES.GAMES
   */
  signInType: ?GoogleSignInType,

  /*
   * [Android][optional]: `isOfflineEnabled: ?boolean`
   * [default]: `undefined`
   * If true, the server will return refresh tokens that can be used to access data when the user has unauthenticated.
   * 1. Safely secure the refresh token as you can only get one during the initial auth flow.
   * 2. There are only so many refresh tokens that are issued, limit per user/app, you can also get one for a single user across all clients in an app. If you requests too many tokens, older tokens will begin to be invalidated.
   */
  isOfflineEnabled: ?boolean,

  /*
   * [Android][optional]: `isPromptEnabled: ?boolean`
   * [default]: false
   * Forces the consent prompt to be shown everytime a user authenticates. Enable this only when necessary.
   */
  isPromptEnabled: ?boolean,

  /*
   * [iOS][optional]: `clientId: ?string`
   * [default]: Read from GoogleService-Info.plist `CLIENT_ID` on iOS, and google-services.json `oauth_client.client_id` on Android.
   * The client ID of the app from the Google APIs (or Firebase) console, this must be set for sign in to work.
   * This value must be defined in the google-services.json on Android, you can define your custom google-services.json
   */
  clientId: ?string,

  /*
   * [iOS][optional]: `language: ?string`
   * [default]: `undefined`
   * The language for sign in, in the form of ISO 639-1 language code optionally followed by a dash
   * and ISO 3166-1 alpha-2 region code, such as |@"it"| or |@"pt-PT"|. Only set if different from
   * system default.
   */
  language: ?string,

  /*
   * [iOS][optional]: `openIdRealm?: ?string`
   * [default]: `undefined`
   * The OpenID2 realm of the home web server. This allows Google to include the user's OpenID
   * Identifier in the OpenID Connect ID token..
   */
  openIdRealm: ?string,
};
```

```js
type GoogleSignInAuthResultType = 'success' | 'cancel';
```

```js
type GoogleSignInAuthResult = {
  type: GoogleSignInAuthResultType,
  user: ?User,
};
```

## Classes

### `GoogleAuthData`

The base class for `GoogleSignIn` authentication data. This method enables you to compare and serialize objects.

#### Methods

- `equals(other: ?any): boolean`
- `toJSON(): object`

### `GoogleIdentity`

Extends [`GoogleAuthData`](#googleauthdata), core management of user data.

#### Variables

- `uid: string;`
- `email: string;`
- `displayName: ?string;`
- `photoURL: ?string;`
- `firstName: ?string;`
- `lastName: ?string;`

### `GoogleUser`

Extends [`GoogleIdentity`](#googleidentity), manages all data regarding an authenticated user.

#### Variables

- `auth: ?GoogleAuthentication;`
- `scopes: Array<string>;`
- `hostedDomain: ?string;`
- `serverAuthCode: ?string;`

#### Methods

- `clearCache(): void`
- `getHeaders(): Promise<{ [string]: string }>`
- `refreshAuth(): Promise<?GoogleAuthentication>`

### `GoogleAuthentication`

Extends [`GoogleAuthData`](#googleauthdata), manages the user tokens.

#### Variables

- `clientId: ?string;`
- `accessToken: ?string;`
- `accessTokenExpirationDate: ?number;`
- `refreshToken: ?string;`
- `idToken: ?string;`
- `idTokenExpirationDate: ?number;` | UNIX time in milliseconds

## Constants

### `GoogleSignIn.ERRORS`

All of the available authentication error codes.

- `GoogleSignIn.ERRORS.SIGN_IN_CANCELLED` The user has cancelled the auth flow
- `GoogleSignIn.ERRORS.SIGN_IN_REQUIRED` Attempting to access user data before any user has been authenticated
- `GoogleSignIn.ERRORS.TASK_IN_PROGRESS` An existing auth task is already running.
- `GoogleSignIn.ERRORS.SIGN_IN_EXCEPTION` A general error has occurred
- `GoogleSignIn.ERRORS.SIGN_IN_FAILED` A Play Services error has occured (Android only)
- `GoogleSignIn.ERRORS.INVALID_ACCOUNT` An invalid account has been provided with `accountName` (Android only)
- `GoogleSignIn.ERRORS.SIGN_IN_NETWORK_ERROR` An issue with the internet connection has caused the auth task to fail (Android only)

### `GoogleSignIn.SCOPES`

- `GoogleSignIn.SCOPES.PROFILE`
- `GoogleSignIn.SCOPES.EMAIL`
- `GoogleSignIn.SCOPES.OPEN_ID`
- `GoogleSignIn.SCOPES.PLUS_ME`
- `GoogleSignIn.SCOPES.GAMES`
- `GoogleSignIn.SCOPES.GAMES_LITE`
- `GoogleSignIn.SCOPES.CLOUD_SAVE`
- `GoogleSignIn.SCOPES.APP_STATE`
- `GoogleSignIn.SCOPES.DRIVE_FILE`
- `GoogleSignIn.SCOPES.DRIVE_APPFOLDER`
- `GoogleSignIn.SCOPES.DRIVE_FULL`
- `GoogleSignIn.SCOPES.DRIVE_APPS`
- `GoogleSignIn.SCOPES.FITNESS_ACTIVITY_READ`
- `GoogleSignIn.SCOPES.FITNESS_ACTIVITY_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_LOCATION_READ`
- `GoogleSignIn.SCOPES.FITNESS_LOCATION_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_BODY_READ`
- `GoogleSignIn.SCOPES.FITNESS_BODY_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_NUTRITION_READ`
- `GoogleSignIn.SCOPES.FITNESS_NUTRITION_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_BLOOD_PRESSURE_READ`
- `GoogleSignIn.SCOPES.FITNESS_BLOOD_PRESSURE_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_BLOOD_GLUCOSE_READ`
- `GoogleSignIn.SCOPES.FITNESS_BLOOD_GLUCOSE_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_OXYGEN_SATURATION_READ`
- `GoogleSignIn.SCOPES.FITNESS_OXYGEN_SATURATION_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_BODY_TEMPERATURE_READ`
- `GoogleSignIn.SCOPES.FITNESS_BODY_TEMPERATURE_READ_WRITE`
- `GoogleSignIn.SCOPES.FITNESS_REPRODUCTIVE_HEALTH_READ`
- `GoogleSignIn.SCOPES.FITNESS_REPRODUCTIVE_HEALTH_READ_WRITE`

### `GoogleSignIn.TYPES`

All of the available sign in types.

- `GoogleSignIn.TYPES.DEFAULT` The standard login method.
- `GoogleSignIn.TYPES.GAMES` Sign in to Google Play Games (Android only)
